reports/markdown-notebooks.err.log
Traceback (most recent call last):
  File "/Users/d/miniconda3/lib/python3.10/site-packages/jupyter_cache/executors/utils.py", line 58, in single_nb_execution
    executenb(
  File "/Users/d/miniconda3/lib/python3.10/site-packages/nbclient/client.py", line 1204, in execute
    return NotebookClient(nb=nb, resources=resources, km=km, **kwargs).execute()
  File "/Users/d/miniconda3/lib/python3.10/site-packages/nbclient/util.py", line 84, in wrapped
    return just_run(coro(*args, **kwargs))
  File "/Users/d/miniconda3/lib/python3.10/site-packages/nbclient/util.py", line 62, in just_run
    return loop.run_until_complete(coro)
  File "/Users/d/miniconda3/lib/python3.10/asyncio/base_events.py", line 649, in run_until_complete
    return future.result()
  File "/Users/d/miniconda3/lib/python3.10/site-packages/nbclient/client.py", line 663, in async_execute
    await self.async_execute_cell(
  File "/Users/d/miniconda3/lib/python3.10/site-packages/nbclient/client.py", line 965, in async_execute_cell
    await self._check_raise_for_error(cell, cell_index, exec_reply)
  File "/Users/d/miniconda3/lib/python3.10/site-packages/nbclient/client.py", line 862, in _check_raise_for_error
    raise CellExecutionError.from_cell_and_msg(cell, exec_reply_content)
nbclient.exceptions.CellExecutionError: An error occurred while executing the following cell:
------------------
qui {
    
    if 1 { //settings,logfile,macros
        
        cls
        clear 
        
        capture log close 
        log using adultlab.log, replace 
        
        
        global url https://wwwn.cdc.gov/nchs/data/nhanes3/1a/ 
        global sasprogram adult.sas
        global datafile adult.dat
        
    }
    
    if 2 { //import adult.sas read-in commands
        
        import delimited ${url}$sasprogram

    }
    
    if 3 { //output adult.do file read-in commands  
            
        preserve 
           keep in 1387/2624
           g id=_n+2
           insobs 1
           replace v1="#delimit ;" in `c(N)'
           insobs 1
           replace v1="infix" in `c(N)'
           insobs 1
           replace v1="using ${url}$datafile ;" in `c(N)'
           insobs 1
           replace v1="#delimit cr" in `c(N)'
           replace id=1 if v1=="#delimit ;"
           replace id=2 if v1=="infix"
           replace id=`c(N)' if v1=="using ${url}$datafile ;"
           replace id=id-1 if v1=="using ${url}$datafile ;"
           replace id=`c(N)' if v1=="#delimit cr"
           sort id
           drop id
           tempfile vars
           rename v1 concat 
           format concat %-20s
           keep concat 
           save `vars'
        restore 
        
        keep in 2627/3865
        split v1, p(" = ")
        gen concat="lab var "+v11+" "+v12
        keep concat 
        format concat %-20s
        drop in `c(N)'
        tempfile labs
        save `labs'
        
        use `vars', clear
        append using `labs'
        outfile using "adult.do", noquote replace
        
        log close 
        
    }
    
}

------------------

[0;36m  Cell [0;32mIn[1], line 12[0;36m[0m
[0;31m    global url https://wwwn.cdc.gov/nchs/data/nhanes3/1a/[0m
[0m                                                      ^[0m
[0;31mSyntaxError[0m[0;31m:[0m invalid decimal literal

SyntaxError: invalid decimal literal (4275544640.py, line 12)

